# pfa-nav

./: HERO_MAP_CONVERTER_README.md  README.md  auto_align_map.py  auto_align_map.py.bak  auto_align_report.json  hero_to_sentry_map_converter.py  hero_to_sentry_map_converter.py.bak  kill_ros.sh  nav.sh  save.sh  save.sh.bak_20260428_225330  save_map_timestamp.sh  slam.sh  slam.sh.bak_20260428_225330  test_saved_map.pgm  test_saved_map.yaml
.claude/: settings.local.json
for_sentry/: metadata.json
for_sentry/converted_assets/: map.pgm  map.yaml
map_conversion_20260504_024133/: metadata.json
map_conversion_20260504_024133/source_assets/: source_map.yaml
src/pb2025_robot_description/resource/xmacro/: simulation_robot.sdf.xmacro
src/pb2025_sentry_nav/: README.md  README_en.md
src/pb2025_sentry_nav/loam_interface/src/: loam_interface.cpp
src/pb2025_sentry_nav/pb2025_nav_bringup/: CMakeLists.txt
src/pb2025_sentry_nav/pb2025_nav_bringup/config/reality/: nav2_params.yaml
src/pb2025_sentry_nav/pb2025_nav_bringup/config/simulation/: nav2_params.yaml
src/pb2025_sentry_nav/pb2025_nav_bringup/launch/: localization_launch.py  rm_navigation_reality_launch.py  rm_navigation_simulation_launch.py
src/pb2025_sentry_nav/pb2025_nav_bringup/map/simulation/: test.pgm  test.yaml
src/pb2025_sentry_nav/pb2025_nav_bringup/rviz/: nav2_default_view.rviz
src/pb2025_sentry_nav/pb2025_nav_bringup/scripts/: export_map_bundle.py  periodic_map_saver.py  prior_pcd_publisher.py
src/pb2025_sentry_nav/point_lio/PCD/: scans.pgm  scans.yaml
